<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ButtonStyle"
        tools:context=".Advanced">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="54dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:id="@+id/linearLayout"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2">
        <TextView
                android:layout_width="72dp"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent" android:id="@+id/currentOperation" android:layout_weight="1"/>
        <TextView
                android:layout_width="301dp"
                android:layout_height="match_parent" android:id="@+id/output" android:layout_weight="1"
                android:gravity="start|center_vertical"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/linearLayout2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
        <Button
                android:text="@string/ce"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/ce" android:layout_weight="1"
                />
        <Button
                android:text="@string/ac"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/ac" android:layout_weight="1"/>
        <Button
                android:text="@string/plus_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/plusMinus" android:layout_weight="1"/>
        <Button
                android:text="@string/divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/divide" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:id="@+id/linearLayout3"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <Button
                android:text="@string/seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/seven" android:layout_weight="1"/>
        <Button
                android:text="@string/eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/eight" android:layout_weight="1"/>
        <Button
                android:text="@string/nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/nine" android:layout_weight="1"/>
        <Button
                android:text="@string/multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/multiply" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:id="@+id/linearLayout4"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <Button
                android:text="@string/four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/four" android:layout_weight="1"/>
        <Button
                android:text="@string/five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/five" android:layout_weight="1"/>
        <Button
                android:text="@string/six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/six" android:layout_weight="1"/>
        <Button
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/minus" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" android:id="@+id/linearLayout5"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">
        <Button
                android:text="@string/one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/one" android:layout_weight="1"/>
        <Button
                android:text="@string/two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/two" android:layout_weight="1"/>
        <Button
                android:text="@string/three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/three" android:layout_weight="1"/>
        <Button
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/plus" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.0" android:id="@+id/linearLayout6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent">
        <Button
                android:text="@string/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/zero" android:layout_weight="2"/>
        <Button
                android:text="@string/dot"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/dot" android:layout_weight="1"/>
        <Button
                android:text="@string/count"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/count" android:layout_weight="1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>