<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/exit_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/exit" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/about_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/about" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/exit" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/advanced_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/advanced" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/about" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView2"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_marginTop="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/simple" android:text="@string/title" android:textSize="30sp"/>
    <Button
            android:text="@string/simple_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/simple" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/advanced" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>