<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".About">

    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.0"
            android:gravity="center"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView3"
            android:textSize="30sp"/>
    <TextView
            android:text="@string/version"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
            android:gravity="center"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/author"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_marginBottom="32dp" android:layout_marginTop="8dp" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>